--- a/requirements.txt
+++ b/requirements.txt
@@ -1,22 +1,26 @@
 construct==2.5.3
-Django>=2.2
+Django==2.2.6
 django-ckeditor==5.7.1
 django-crispy-forms==1.7.2
 django-elasticsearch-dsl==0.4.4
+django-extensions==2.2.5
 django-haystack==2.8.1
 django-js-asset==1.2.2
+django-widget-tweaks==1.4.5
 elasticsearch==5.5.3
 elasticsearch-dsl==5.4.0
 future==0.17.1
 gunicorn==19.9.0
 ipaddress==1.0.22
 pefile==2019.4.18
-Pillow==6.0.0
-psycopg2-binary==2.8.2
+Pillow==6.2.1
+psycopg2-binary==2.8.4
 python-dateutil==2.8.0
+python-decouple==3.1
 python-ptrace==0.9.3
 pytz==2019.1
 simplejson==3.16.0
 six==1.12.0
 sqlparse==0.3.0
 urllib3==1.25.3
+whitenoise==4.1.4
