--- a/requirements.txt
+++ b/requirements.txt
@@ -1,20 +1,23 @@
+astroid==2.3.2
 construct==2.5.3
 Django==2.2.6
 django-ckeditor==5.7.1
 django-crispy-forms==1.7.2
-django-elasticsearch-dsl==0.4.4
 django-extensions==2.2.5
-django-haystack==2.8.1
 django-js-asset==1.2.2
 django-widget-tweaks==1.4.5
-elasticsearch==5.5.3
-elasticsearch-dsl==5.4.0
 future==0.17.1
 gunicorn==19.9.0
 ipaddress==1.0.22
+isort==4.3.21
+lazy-object-proxy==1.4.3
+mccabe==0.6.1
 pefile==2019.4.18
 Pillow==6.2.1
 psycopg2-binary==2.8.4
+pylint==2.4.3
+pylint-django==2.0.11
+pylint-plugin-utils==0.6
 python-dateutil==2.8.0
 python-decouple==3.1
 python-ptrace==0.9.3
@@ -24,3 +27,4 @@ six==1.12.0
 sqlparse==0.3.0
 urllib3==1.25.3
 whitenoise==4.1.4
+wrapt==1.11.2
